@@ -1,3 +1,4 @@
 composer.phar
 composer.lock
 /vendor/
+.DS_STORE
