@@ -1,3 +1,9 @@
+2020-02-14
+    * Add support for lower PHP version
+    * Improved documentation
+    * Fix for custom spans
+    * Improved custom spans
+
 2019-09-30 (6.0.1) devngl
     * Laravel 6 support.
 
